<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:text="Instructions:"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="338dp"
        android:layout_height="109dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/instructions"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:text="Select Level:"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions" />

    <TextView
        android:id="@+id/problemDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="84dp"
        android:text="@string/problem"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/levelSelection" />

    <EditText
        android:id="@+id/enter_number"
        android:layout_width="386dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="144dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/problemDisplay" />

    <Button
        android:id="@+id/check"
        android:layout_width="390dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:text="@string/check"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_number" />

    <TextView
        android:id="@+id/pointLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:text="@string/point_label"
        android:textColor="@color/blue"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check" />

    <TextView
        android:id="@+id/point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/point"
        android:textColor="@color/red"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@id/pointLabel"
        app:layout_constraintTop_toBottomOf="@id/check" />

    <RadioGroup
        android:id="@+id/levelSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:orientation="horizontal"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/idBtnJavaRadio"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:padding="4dp"
            android:text="@string/level_i3"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="234dp" />

        <RadioButton
            android:id="@+id/idBtnKotlinRadio"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:padding="4dp"
            android:text="@string/level_i5"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="234dp" />

        <RadioButton
            android:id="@+id/idBtnFlutterRadio"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:padding="4dp"
            android:text="@string/level_i7"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="244dp"
            tools:layout_editor_absoluteY="234dp" />

    </RadioGroup>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="410dp"
        android:layout_height="40dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>

